--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html, body {
   margin: 0;
+
 }
 
 body {
@@ -31,7 +32,7 @@ header > h1 {
 
 article.journal-entry {
   display: flex;
-  margin-bottom: 36px;
+  margin: 36px
 }
 
 article.journal-entry .marker {
@@ -82,7 +83,6 @@ article.journal-entry .main-image {
   line-height: 1.5;
   font-size: 0.8rem;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;  
   overflow: hidden;
 }
